解答+α(重複排除とコンボボックス追加)まで完了

--- a/WPF/ColorChecker/MainWindow.xaml
+++ b/WPF/ColorChecker/MainWindow.xaml
@@ -29,17 +29,23 @@
 
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="R" FontSize="30"/>
             <Slider x:Name="rSlider" Grid.Column="1" VerticalAlignment="Center" Maximum="255" ValueChanged="Slider_ValueChanged" SmallChange="1"/>
-            <TextBox Text="{Binding ElementName=rSlider,Path=Value,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="rValue" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="45" FontSize="20" MaxLength="255"/>
+            <TextBox Text="{Binding ElementName=rSlider,Path=Value,Mode=TwoWay, StringFormat={}{0:0}}" x:Name="rValue" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="45" FontSize="20" MaxLength="255"/>
 
             <TextBlock Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Text="G" FontSize="30" />
             <Slider x:Name="gSlider" Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" Maximum="255" ValueChanged="Slider_ValueChanged" SmallChange="1"/>
-            <TextBox Text="{Binding ElementName=gSlider,Path=Value,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="gValue" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="45" FontSize="20" MaxLength="255"/>
+            <TextBox Text="{Binding ElementName=gSlider,Path=Value,Mode=TwoWay, StringFormat={}{0:0}}" x:Name="gValue" Grid.Row="1" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="45" FontSize="20" MaxLength="255"/>
 
             <TextBlock Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="B" FontSize="30"/>
             <Slider x:Name="bSlider" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Maximum="255" ValueChanged="Slider_ValueChanged" SmallChange="1"/>
-            <TextBox Text="{Binding ElementName=bSlider,Path=Value,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="bValue" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="45" FontSize="20" MaxLength="255"/>
+            <TextBox Text="{Binding ElementName=bSlider,Path=Value,Mode=TwoWay, StringFormat={}{0:0}}" x:Name="bValue" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="45" FontSize="20" MaxLength="255"/>
 
-            <ComboBox x:Name="colorSelectComboBox" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Margin="10,0,10,0"/>
+            <ComboBox x:Name="colorSelectComboBox" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Margin="10,0,10,0" SelectionChanged="colorSelectComboBox_SelectionChanged">
+                <ComboBoxItem Content="赤" Tag="255,0,0"/>
+                <ComboBoxItem Content="緑" Tag="0,255,0"/>
+                <ComboBoxItem Content="青" Tag="0,0,255"/>
+                <ComboBoxItem Content="黄色" Tag="255,255,0"/>
+                <ComboBoxItem Content="紫" Tag="128,0,128"/>
+            </ComboBox>
 
         </Grid>
 
@@ -50,7 +56,7 @@
             </Grid.RowDefinitions>
 
             <Button x:Name="stockButton" Grid.Row="0" Content="STOCK" FontSize="15" Margin="10" Background="AliceBlue" Click="stockButton_Click"/>
-            <ListBox x:Name="stockList" Grid.Row="1" Margin="10" Background="AliceBlue" SelectionChanged="stockList_SelectionChanged"/>
+            <ListBox x:Name="stockList" Grid.Row="1" Margin="10" Background="AliceBlue" SelectionChanged="stockList_SelectionChanged" FontFamily="MS UI Gothic"/>
         </Grid>
     </Grid>
 </Window>
