--- a/WPF/ColorChecker/MainWindow.xaml
+++ b/WPF/ColorChecker/MainWindow.xaml
@@ -38,15 +38,20 @@
             <TextBlock Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="B" FontSize="30"/>
             <Slider x:Name="bSlider" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Maximum="255" ValueChanged="Slider_ValueChanged" SmallChange="1"/>
             <TextBox Text="{Binding ElementName=bSlider,Path=Value,Mode=TwoWay, StringFormat={}{0:0}}" x:Name="bValue" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="45" FontSize="20" MaxLength="255"/>
-
-            <ComboBox x:Name="colorSelectComboBox" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Margin="10,0,10,0" SelectionChanged="colorSelectComboBox_SelectionChanged">
-                <ComboBoxItem Content="赤" Tag="255,0,0"/>
-                <ComboBoxItem Content="緑" Tag="0,255,0"/>
-                <ComboBoxItem Content="青" Tag="0,0,255"/>
-                <ComboBoxItem Content="黄色" Tag="255,255,0"/>
-                <ComboBoxItem Content="紫" Tag="128,0,128"/>
+            <ComboBox ItemsSource="{Binding}" SelectedValue="{Binding Color}" x:Name="colorSelectComboBox" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Margin="10,0,10,0" SelectionChanged="colorSelectComboBox_SelectionChanged">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Border Width="20" Height="Auto" Margin="5,0" BorderThickness="1" BorderBrush="Black" >
+                                <Border.Background>
+                                    <SolidColorBrush Color="{Binding Color}"/>
+                                </Border.Background>
+                            </Border>
+                            <TextBlock Text="{Binding Name}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
             </ComboBox>
-
         </Grid>
 
         <Grid Grid.Column="2">
