--- a/WPF/ColorChecker/MainWindow.xaml
+++ b/WPF/ColorChecker/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ColorChecker"
         mc:Ignorable="d"
-        Title="MainWindow" Height="300" Width="700">
+        Title="MainWindow" Height="300" Width="700"
+        ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -38,7 +39,7 @@
             <TextBlock Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center" Text="B" FontSize="30"/>
             <Slider x:Name="bSlider" Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" Maximum="255" ValueChanged="Slider_ValueChanged" SmallChange="1"/>
             <TextBox Text="{Binding ElementName=bSlider,Path=Value,Mode=TwoWay, StringFormat={}{0:0},UpdateSourceTrigger=PropertyChanged}" x:Name="bValue" Grid.Row="2" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Center" Width="45" FontSize="20" MaxLength="255"/>
-            <ComboBox ItemsSource="{Binding}" SelectedValue="{Binding Color}" x:Name="colorSelectComboBox" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" Margin="10,0,10,0" SelectionChanged="colorSelectComboBox_SelectionChanged">
+            <ComboBox ItemsSource="{Binding}" SelectedValue="{Binding Color}" x:Name="colorSelectComboBox" Grid.Row="3" Grid.Column="1" VerticalAlignment="Center" SelectionChanged="colorSelectComboBox_SelectionChanged">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
@@ -58,10 +59,15 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="5*"/>
+                <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+            
 
-            <Button x:Name="stockButton" Grid.Row="0" Content="STOCK" FontSize="15" Margin="10" Background="AliceBlue" Click="stockButton_Click"/>
+            <Button x:Name="stockButton" Grid.Row="0" Content="STOCK" FontSize="15" Margin="10,10,10,0" Background="AliceBlue" Click="stockButton_Click"/>
             <ListBox x:Name="stockList" Grid.Row="1" Margin="10" Background="AliceBlue" SelectionChanged="stockList_SelectionChanged" FontFamily="MS UI Gothic"/>
+            
+            <Button x:Name="clearButton" Grid.Row="2" Margin="10,0,125,10" Content="削除" Click="clearButton_Click"/>
+            <Button x:Name="clearAllButton" Grid.Row="2" Margin="125,0,10,10" Content="全削除" Click="clearAllButton_Click"/>
         </Grid>
     </Grid>
 </Window>
