--- a/WPF/WpfApp1/App.xaml
+++ b/WPF/WpfApp1/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="SampleWeightUnitConverter.App"
+﻿<Application x:Class="WpfApp1.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:SampleWeightUnitConverter="clr-namespace:SampleWeightUnitConverter"
-             StartupUri="View\MainWindow.xaml">
+             xmlns:local="clr-namespace:WpfApp1"
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
