--- a/WPF/VisibilityConverter/App.xaml
+++ b/WPF/VisibilityConverter/App.xaml
@@ -4,6 +4,6 @@
              xmlns:local="clr-namespace:VisibilityConverter"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary Source="Resouces.xaml"/>
     </Application.Resources>
 </Application>
