--- a/WPF/VisibilityConverter/MainWindow.xaml
+++ b/WPF/VisibilityConverter/MainWindow.xaml
@@ -7,9 +7,34 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="250" Width="300">
     <Window.Resources>
-        <SolidColorBrush x:Key="ButtonBrushKey" Color="Aqua"/>
+        <DataTemplate DataType="{x:Type local:ColorViewModel}">
+            <StackPanel Orientation="Horizontal">
+                <Rectangle Width="12" Height="12">
+                    <Rectangle.Fill>
+                        <SolidColorBrush Color="{Binding Color}"/>
+                    </Rectangle.Fill>
+                </Rectangle>
+                <TextBlock Margin="2" Text="{Binding Name}"/>
+            </StackPanel>
+        </DataTemplate>
+        <Style x:Key="EllipseButton" TargetType="Button">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <Grid>
+                            <Ellipse Fill="{TemplateBinding Background}"/>
+                            <ContentPresenter
+                                Margin="{TemplateBinding Padding}"
+                                RecognizesAccessKey="True"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Window.Resources>
-    
+
     <StackPanel>
         <StackPanel.Resources>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
@@ -25,15 +50,10 @@
             <RadioButton Content="緑" Click="RadioButton_Click"/>
         </StackPanel>
 
-        <Button Margin="10" Content="ボタン1" Background="{DynamicResource ButtonBrushKey}"/>
-        <Button Margin="10" Content="ボタン2" Background="{DynamicResource ButtonBrushKey}"/>
-        <Button Margin="10" Content="ボタン3">
-            <Button.Resources>
-                <SolidColorBrush x:Key="WhiteBrushKey" Color="BlueViolet"/>
-            </Button.Resources>
-            <Button.Background>
-                <StaticResource ResourceKey="WhiteBrushKey"/>
-            </Button.Background>
-        </Button>
+        <Button Style="{StaticResource EllipseButton}"
+                Content="ボタン1" Background="Gray" Click="Button_Click"/>
+        <Button Style="{StaticResource EllipseButton}" Padding="10" 
+                Content="ボタン2" Background="LightBlue"/>
+        <ComboBox ItemsSource="{x:Static local:ColorViewModel.ColorList}"/>
     </StackPanel>
 </Window>
