--- a/SQLite/CustomerApp/MainWindow.xaml
+++ b/SQLite/CustomerApp/MainWindow.xaml
@@ -18,23 +18,23 @@
                     <ColumnDefinition Width="2*"/>
                     <ColumnDefinition Width="8*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="名前" Grid.Row="0" Grid.Column="0"/>
-                <TextBox x:Name="NameTextBox" Grid.Row="0" Grid.Column="1"/>
-                <TextBlock Text="電話番号" Grid.Row="1" Grid.Column="0"/>
-                <TextBox x:Name="PhoneTextBox" Grid.Row="1" Grid.Column="1"/>
-                <TextBlock Text="住所" Grid.Row="2" Grid.Column="0"/>
-                <TextBox x:Name="AddressTextBox" Grid.Row="2" Grid.Column="1"/>
+                <TextBlock Text="名前" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"/>
+                <TextBox x:Name="NameTextBox" Grid.Row="0" Grid.Column="1" Margin="2"/>
+                <TextBlock Text="電話番号" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center"/>
+                <TextBox x:Name="PhoneTextBox" Grid.Row="1" Grid.Column="1" Margin="2"/>
+                <TextBlock Text="住所" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center"/>
+                <TextBox x:Name="AddressTextBox" Grid.Row="2" Grid.Column="1" Margin="2"/>
             </Grid>
-            <Button Content="Save" x:Name="SaveButton" Click="SaveButton_Click"/>
-            <Button Content="Read" x:Name="ReadButton" Click="ReadButton_Click"/>
-            <ListView x:Name="CustomerListView" Margin="0,5,0,0">
+            <Button Content="Save" x:Name="SaveButton" Click="SaveButton_Click" Margin="2"/>
+            <Button Content="Read" x:Name="ReadButton" Click="ReadButton_Click" Margin="2"/>
+            <ListView x:Name="CustomerListView" Margin="0,5,0,0" Height="300">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel>
                             <TextBlock Text="{Binding Id}"/>
                             <TextBlock Text="{Binding Name}" FontSize="20"/>
                             <TextBlock Text="{Binding Phone}" Foreground="Blue"/>
-                            <TextBlock Text="{Binding Address}" FontSize="10"/>
+                            <TextBlock Text="{Binding Address}" Foreground="Green"/>
                         </StackPanel>
                     </DataTemplate>
                 </ListView.ItemTemplate>
