ファイル開けるとこまで

--- a/SQLite/CustomerApp/MainWindow.xaml
+++ b/SQLite/CustomerApp/MainWindow.xaml
@@ -28,8 +28,11 @@
             <Button Content="Save" x:Name="SaveButton" Click="SaveButton_Click" Margin="2"/>
             <Button Content="Delete" x:Name="DeleteButton" Click="DeleteButton_Click" Margin="2"/>
             <Button Content="Update" x:Name="UpdateButton" Click="UpdateButton_Click" Margin="2"/>
+            <Button Content="Clear" x:Name="ClearButton"  Click="ClearButton_Click" Margin="2"/>
+            <Button Content="OpenFile" x:Name="OpenFileButton" Click="OpenFileButton_Click" Margin="2"/>
+            <Image x:Name="LoadedImage" Height="100" Margin="2"/>
             <TextBox x:Name="SearchTextBox" FontSize="20" TextChanged="SearchTextBox_TextChanged"/>
-            <ListView x:Name="CustomerListView" Margin="0,5,0,0" Height="300" SelectionChanged="CustomerListView_SelectionChanged">
+            <ListView x:Name="CustomerListView" Margin="0,5,0,0" Height="300" SelectionChanged="CustomerListView_SelectionChanged" SelectionMode="Single">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <StackPanel>
