--- a/SQLite/CustomerApp/MainWindow.xaml
+++ b/SQLite/CustomerApp/MainWindow.xaml
@@ -5,8 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomerApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="500" Width="300" Loaded="Window_Loaded">
+        Title="MainWindow" Height="340" Width="500" Loaded="Window_Loaded">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
         <StackPanel Margin="10">
             <Grid>
                 <Grid.RowDefinitions>
@@ -15,8 +19,8 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="8*"/>
+                    <ColumnDefinition Width="2.2*"/>
+                    <ColumnDefinition Width="7.8*"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="名前" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center"/>
                 <TextBox x:Name="NameTextBox" Grid.Row="0" Grid.Column="1" Margin="2"/>
@@ -25,22 +29,42 @@
                 <TextBlock Text="住所" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center"/>
                 <TextBox x:Name="AddressTextBox" Grid.Row="2" Grid.Column="1" Margin="2"/>
             </Grid>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Margin="5">
+                    <Button Content="OpenFile" x:Name="OpenFileButton" Click="OpenFileButton_Click" Margin="15"/>
+                    <Button Content="Imageclear" x:Name="ImageClearButton" Click="ImageClearButton_Click" Margin="15" />
+                </StackPanel>
+                <Image Grid.Column="2"  x:Name="LoadedImage" Source="{Binding PictureSource}" Height="100" Margin="5"/>
+            </Grid>
             <Button Content="Save" x:Name="SaveButton" Click="SaveButton_Click" Margin="2"/>
             <Button Content="Delete" x:Name="DeleteButton" Click="DeleteButton_Click" Margin="2"/>
             <Button Content="Update" x:Name="UpdateButton" Click="UpdateButton_Click" Margin="2"/>
-            <Button Content="Clear" x:Name="ClearButton"  Click="ClearButton_Click" Margin="2"/>
-            <Button Content="OpenFile" x:Name="OpenFileButton" Click="OpenFileButton_Click" Margin="2"/>
-            <Image x:Name="LoadedImage" Height="100" Margin="2"/>
+            <Button Content="Allclear" x:Name="AllClearButton"  Click="AllClearButton_Click" Margin="2"/>
             <TextBox x:Name="SearchTextBox" FontSize="20" TextChanged="SearchTextBox_TextChanged"/>
-            <ListView x:Name="CustomerListView" Margin="0,5,0,0" Height="300" SelectionChanged="CustomerListView_SelectionChanged" SelectionMode="Single">
+        </StackPanel>
+        <StackPanel Grid.Column="2" Margin="10">
+            <ListView x:Name="CustomerListView" Grid.Column="1" Height="300" SelectionChanged="CustomerListView_SelectionChanged" SelectionMode="Single">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel>
-                            <TextBlock Text="{Binding Id}"/>
-                            <TextBlock Text="{Binding Name}" FontSize="20"/>
-                            <TextBlock Text="{Binding Phone}" Foreground="Blue"/>
-                            <TextBlock Text="{Binding Address}" Foreground="Green"/>
-                        </StackPanel>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Width="100">
+                                <TextBlock Text="{Binding Id}"/>
+                                <TextBlock Text="{Binding Name}" FontSize="20"/>
+                                <TextBlock Text="{Binding Phone}" Foreground="Blue"/>
+                                <TextBlock Text="{Binding Address}" Foreground="Green"/>
+                            </StackPanel>
+                            <StackPanel Grid.Column="1">
+                                <Image Source="{Binding PictureSource}" Width="100" Height="100"/>
+                            </StackPanel>
+                        </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
