--- a/SQLite/CustomerApp/MainWindow.xaml
+++ b/SQLite/CustomerApp/MainWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CustomerApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="340" Width="500" Loaded="Window_Loaded">
+        Title="顧客管理" Height="390" Width="700" Loaded="Window_Loaded" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="3.5*"/>
+            <ColumnDefinition Width="6.5*"/>
         </Grid.ColumnDefinitions>
-        <StackPanel Margin="10">
+        <StackPanel Margin="10,10,10,34">
             <Grid>
                 <Grid.RowDefinitions>
                     <RowDefinition/>
@@ -35,34 +35,59 @@
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel Margin="5">
-                    <Button Content="OpenFile" x:Name="OpenFileButton" Click="OpenFileButton_Click" Margin="15"/>
-                    <Button Content="Imageclear" x:Name="ImageClearButton" Click="ImageClearButton_Click" Margin="15" />
+                    <Button Content="OpenFile" x:Name="OpenFileButton" Click="OpenFileButton_Click" Margin="15" Background="Beige"/>
+                    <Button Content="Imageclear" x:Name="ImageClearButton" Click="ImageClearButton_Click" Margin="15" Background="Yellow"/>
                 </StackPanel>
-                <Image Grid.Column="2"  x:Name="LoadedImage" Source="{Binding PictureSource}" Height="100" Margin="5"/>
+                <Image Grid.Column="2" x:Name="LoadedImage" Source="{Binding PictureSource}" Height="100" Margin="5"/>
             </Grid>
-            <Button Content="Save" x:Name="SaveButton" Click="SaveButton_Click" Margin="2"/>
-            <Button Content="Delete" x:Name="DeleteButton" Click="DeleteButton_Click" Margin="2"/>
-            <Button Content="Update" x:Name="UpdateButton" Click="UpdateButton_Click" Margin="2"/>
-            <Button Content="Allclear" x:Name="AllClearButton"  Click="AllClearButton_Click" Margin="2"/>
-            <TextBox x:Name="SearchTextBox" FontSize="20" TextChanged="SearchTextBox_TextChanged"/>
+            <Button Content="Regist" x:Name="SaveButton" Click="SaveButton_Click" Margin="2" Background="LightBlue"/>
+            <Button Content="Delete" x:Name="DeleteButton" Click="DeleteButton_Click" Margin="2" Background="Red"/>
+            <Button Content="Update" x:Name="UpdateButton" Click="UpdateButton_Click" Margin="2" Background="LightGreen"/>
+            <Button Content="Allclear" x:Name="AllClearButton"  Click="AllClearButton_Click" Margin="2" Background="Yellow"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2.2*"/>
+                    <ColumnDefinition Width="7.8*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="検索" Grid.Column="0" VerticalAlignment="Center" Margin="2"/>
+                <TextBox x:Name="SearchTextBox" FontSize="15" TextChanged="SearchTextBox_TextChanged" Grid.Column="1" Margin="2"/>
+            </Grid>
         </StackPanel>
-        <StackPanel Grid.Column="2" Margin="10">
-            <ListView x:Name="CustomerListView" Grid.Column="1" Height="300" SelectionChanged="CustomerListView_SelectionChanged" SelectionMode="Single">
+        <StackPanel Grid.Column="1" Margin="10,10,10,34">
+            <Grid Background="WhiteSmoke" >
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="2.5*"/>
+                    <ColumnDefinition Width="4*"/>
+                    <ColumnDefinition Width="1.5*"/>
+                </Grid.ColumnDefinitions>
+                <Border BorderBrush="Gray" BorderThickness="1" Grid.Column="0"/>
+                <Border BorderBrush="Gray" BorderThickness="1" Grid.Column="1"/>
+                <Border BorderBrush="Gray" BorderThickness="1" Grid.Column="2"/>
+                <Border BorderBrush="Gray" BorderThickness="1" Grid.Column="3"/>
+                <TextBlock Text="名前" Grid.Column="0" HorizontalAlignment="Center" FontSize="13"/>
+                <TextBlock Text="電話番号" Grid.Column="1" HorizontalAlignment="Center" FontSize="13"/>
+                <TextBlock Text="住所" Grid.Column="2" HorizontalAlignment="Center" FontSize="13"/>
+                <TextBlock Text="画像" Grid.Column="3" HorizontalAlignment="Center" FontSize="13"/>
+            </Grid>
+            <ListView x:Name="CustomerListView" Grid.Column="1" Height="284" Width="435" SelectionChanged="CustomerListView_SelectionChanged" SelectionMode="Single" Background="GhostWhite">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Grid>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <StackPanel Width="100">
-                                <TextBlock Text="{Binding Id}"/>
-                                <TextBlock Text="{Binding Name}" FontSize="20"/>
-                                <TextBlock Text="{Binding Phone}" Foreground="Blue"/>
-                                <TextBlock Text="{Binding Address}" Foreground="Green"/>
-                            </StackPanel>
-                            <StackPanel Grid.Column="1">
-                                <Image Source="{Binding PictureSource}" Width="100" Height="100"/>
+                            <StackPanel Width="435">
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="2.5*"/>
+                                        <ColumnDefinition Width="4*"/>
+                                        <ColumnDefinition Width="1.5*"/>
+                                        <ColumnDefinition Width="0.15*"/>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="{Binding Name}" FontSize="15" Grid.Column="0" VerticalAlignment="Center"/>
+                                    <TextBlock Text="{Binding Phone}" FontSize="15" Foreground="Blue" Grid.Column="1" VerticalAlignment="Center"/>
+                                    <TextBlock Text="{Binding Address}" FontSize="15" Foreground="Green" Grid.Column="2" VerticalAlignment="Center"/>
+                                    <Image Source="{Binding PictureSource}" Width="35" Height="35" Grid.Column="3" VerticalAlignment="Center" Margin="0,0,20,0"/>
+                                </Grid>
                             </StackPanel>
                         </Grid>
                     </DataTemplate>
